      the number of tracks in the playlist.  What was the "Playlist Length "
      constraint is now called "Playlist Duration".
    * MPRIS2 support for controlling Amarok over D-Bus.
    * New "Playdar Collection" allows searching for and listening
      to music provided by a running local Playdar service.

  CHANGES:
    * Add "Added This Hour" filter preset to the collection brower widget.
    * Bumped KDE dependency to version 4.4., and Qt dependency to 4.6.
    * Print message when a file can't be copied to a media player.
      Patch by Sergey Ivanov <123kash@gmail.com>. (BR 203820)
    * Improved the usability of device items in Media Sources by adding tooltips.
    * Deleting items in the collection/file browser will move them to trash;
      pressing SHIFT while clicking the action will bypass trash.

  BUGFIXES:
    * Playlist sorting breadcrumb items have been untranslatable.
      Patch by Alexander Potashev <aspotashev@gmail.com>. (BR 189750)
    * Dynamic Playlist criteria were not being saved properly. (BR 243562)
    * Collection Browser should show Artist names for Compilation Albums. (BR
      252790)
    * When Amarok starts and "Continue playing when Amarok is started" is selected,
      the Current Track applet showed songs of the artist instead of the current
      track info. Patch by Conrad Hübler. (BR 241641)
    * Fixed crash on Windows when exporting playlist to any file type. Patch by
      James Duncan <james.t.duncan@gmail.com>. (BR 249376)
    * If album keyword is empty, show "unknown album" in context window. (BR 205038)
    * Ampache wouldn't connect to servers placed in a subdirectory.
    * Fixed an initialization bug which affected all context applets.
    * Fixed bug where users could drag applets around indiscriminately.
    * FLAC BPM tags could be read incorrectly. (BR 234166)


==BEGIN Qt 4.6 / KDE 4.4 DEPENDENCY==


VERSION 2.3.2
  CHANGES:
    * Bumped libMTP dependency to version 1.0.0.