@@ -24,7 +24,6 @@
 #include "PrettyItemDelegate.h"
 #include "playlist/proxymodels/GroupingProxy.h"
 #include "playlist/view/PlaylistViewCommon.h"
-#include "playlist/view/tooltips/ToolTipManager.h"
 
 #include <QListView>
 #include <QModelIndex>
